--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,13 +5,6 @@ platform:
   - x64
   - x86
 
-environment:
-  matrix:
-    - PYTHON_VERSION: 2.7
-    - PYTHON_VERSION: 3.4
-    - PYTHON_VERSION: 3.5
-    - PYTHON_VERSION: 3.6
-
 clone_depth: 50
 
 install:
@@ -28,48 +21,19 @@ install:
   - ps: >-
       if($env:PLATFORM -eq "x64") {
           $env:MINICONDA += "-x64";
-          $env:PATH += ";C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin"
+          $env:PATH += ";C:\Qt\Tools\mingw530_32\bin"
       }
-      else {$env:PATH += ";C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw32\bin"}
-  - set PATH=%MINICONDA%;%MINICONDA%\Scripts;%PATH%
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy nose pandas scikit-learn pytest
-  - activate test-environment
-  - conda install mkl=2017.0.3  # Temp fix. Delete the line in the future when compatibility will be fixed.
-  - ps: $env:RGF_VER = (Get-Content rgf\VERSION).trim()
-  - python setup.py sdist --formats gztar
-  - pip install dist\rgf_python-%RGF_VER%.tar.gz -v
+      else {$env:PATH += ";C:\Qt\Tools\mingw530_32\bin"}
 
 test_script:
-  - pytest tests/ -v
-
-after_test:
+  - cd include/fast_rgf/build
+  - cmake .. -G "MinGW Makefiles"
+  - mingw32-make
+  - mingw32-make install
   - ps: >-
-      if(
-         $env:APPVEYOR_REPO_TAG -eq "false" -or
-         $env:APPVEYOR_REPO_BRANCH -ne "master" -or
-         $env:PYTHON_VERSION -ne "3.6") {
-          Exit-AppVeyorBuild
-      }
-  - IF "%PLATFORM%"=="x64" (
-    python setup.py bdist_wheel --plat-name=win-amd64 --universal)
-    ELSE (
-    python setup.py bdist_wheel --plat-name=win32 --universal)
-
-artifacts:
-  - path: dist/*
-    name: pip
-
-deploy:
-  release: $(APPVEYOR_REPO_TAG_NAME)
-  provider: GitHub
-  auth_token:
-    secure: iGMgQcGFl96QWnliaddwr6xESvFviRt5J9pmLlJvyLP1OZYgeFr5Jutgq7UE0THX
-  artifact: pip
-  force_update: true
-  draft: true
-  on:
-    appveyor_repo_tag: true
-    branch: master
-    PYTHON_VERSION: 3.6
+      $test = Get-Content C:\projects\rgf-python\include\fast_rgf\examples\ex2\inputs\housing.train;
+      $output = $test[0..6];
+      Set-Content -Path C:\projects\rgf-python\include\fast_rgf\examples\ex2\inputs\housing.train -Value $output;
+  - type C:\projects\rgf-python\include\fast_rgf\examples\ex2\inputs\housing.train
+  - cd ../bin
+  - forest_train.exe trn.x-file="../examples/ex2/inputs/housing.train" trn.x-file_format="y.x" trn.target=REAL model.save="../examples/ex2/outputs/model-rgf"
