--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,7 +42,7 @@ install:
   - pip install dist\rgf_python-%RGF_VER%.tar.gz -v
 
 test_script:
-  - pytest tests/ -v
+  - pytest tests/ -v -s
 
 after_test:
   - ps: >-
